--- a/style.css
+++ b/style.css
@@ -29,10 +29,23 @@
     flex-direction: column;
 }
 
-.to-do-app h2 img{
-    visibility: hidden;
-    height: 30px;
-    margin-left: 30px;
+.head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 250px;
+}
+
+.date{
+      color: #212121;
+      font-size: 15px;
+      font-family: "Alkatra";
+      width: 100px;
+      text-align: center;
+      box-shadow: 0 0 5px 2px rgba(128, 128, 128, 0.683);
+      outline:none;
+      border:none;
+      border-radius: 5px;
 }
 
 .row{
